--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,12 @@ along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normali
 and Blueprint http://www.blueprintcss.org/
 */
 
+@function file_exists() {
+	@if (  ) {
+
+	}
+}
+
 // reset styles should stay at the top
 @import "css/reset";
 
@@ -54,7 +60,7 @@ and Blueprint http://www.blueprintcss.org/
 @import "css/slushman";
 @import "css/authorbox";
 @import "css/socials";
-@import "css/singlepost";
+@import "css/login";
 
 /* Import Layouts
 ----------------------------------------------- */
