--- a/css/_content.scss
+++ b/css/_content.scss
@@ -9,59 +9,118 @@
 .site-main {
 	width: 100%;
 	margin: 0 auto;
-	padding: 1%;
-	background-color: $light;
+	padding: 1em;
 
 	@media only screen and (min-width: $responsive2) {
 		padding: 2%;
 	}
 }
 
+	.site-content {
+		background: $light;
+		margin-bottom: $vspacing;
+		overflow: hidden;
+		z-index: 1;
+		position: relative;
+
+		&:before,
+		&:after {
+			position: absolute;
+			z-index: -1;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			content: "";
+			left: 0;
+			display: block;
+		}
+
+		&:before {
+			background: $budarkred;
+		}
+
+		&:after {
+			background: $light;
+			left: 28%;
+		}
+	}
+
 	.content-area {
 		width: 100%;
-		margin-bottom: $vspacing;
+		background: $light;
 
 		@media only screen and (min-width: $responsive3) {
-			float: left;
 			max-width: 72%;
+			float: right;
 		}
 	}
 
-	.site-content {
+	.widget-area {
+		background: $budarkred;
 		padding: 1em;
-	}
 
-	.paging-navigation {
-		@include hide();
-	}
-
-		.post {
-			padding: 2%;
-			overflow: hidden;
-			margin: 0 auto;
+		@media only screen and (min-width: $responsive3) {
+			max-width: 28%;
+			float: left;
 		}
+	} // End of .widget-area
 
 		.entry-header {
 			overflow: hidden;
+			margin-bottom: 1.5em;
+		}
 			
 			.entry-title {
 				float: left;
-				margin: 0;
+				margin: 0 0 0.25em;
 				color: $budarkred;
-				font-weight: bold;
-				line-height: 1em;
-				font-family: museo_slab500;
+				text-transform: uppercase;
 
 				.entry-title-link,
 				a {
 					text-decoration: none;
 					text-transform: uppercase;
 				}
-
 			} // End of .entry-title
 
 			.entry-meta {
-				margin-left: 0.25em;					
+				font-size: $milli;
+				clear: both;
+
+				.entry-cats {
+					
+					a {
+						text-decoration: none;
+
+						@media all and (min-width: $responsive1) {
+							color: white;
+						}
+					}
+
+					@media all and (min-width: $responsive1) {
+						padding: 0.4em;
+						background-color: $budarkred;
+						color: white;
+						display: inline-block;
+					}
+				}
+
+				.posted-on {
+
+					a {
+						text-decoration: none;
+
+						@media all and (min-width: $responsive1) {
+							color: $budarkgray;
+						}
+					}
+
+					@media all and (min-width: $responsive1) {
+						padding: 0.4em;
+						background-color: $lightgray;
+						display: inline-block;
+					}
+				}
 			}
 
 			.post-time-link {
@@ -69,45 +128,6 @@
 				color: $budarkgray;
 				font-weight: bold;
 			}
-
-			.entry-date {}
-
-		} // End of .entry-header
-
-		.hentry .entry-content {
-			margin: 0;
-			color: $budarkgray;
-
-			p {
-				margin: 0 0 $lineheight;
-			}
-		}
-
-		.entry-featured-image {
-			margin: 0 auto;
-			max-width: 300px;
-
-			@media only screen and (min-width: $responsive1) {
-				float: left;
-				margin: 0 2% 0 0;
-			}
-
-		}
-
-		footer.entry-meta {
-			font-size: .85em;
-
-			.comments-link {
-				a {}
-			}
-
-			.edit-link {
-
-				@include site_button();
-				.post-edit-link {}
-			}
-
-		} // End of .entry-meta
 
 	.sticky {
 		max-width: 100% !important;
@@ -125,7 +145,6 @@
 				.entry-title-link {
 					color: $light;
 				}
-
 			}
 
 			.entry-featured-image {
@@ -135,7 +154,6 @@
 					float: left;
 					margin: 0 2% 0 0;
 				}
-
 			}
 
 			a {
@@ -145,16 +163,6 @@
 		} // End of .entry-content
 
 	}
-
-	.widget-area {
-		overflow: hidden;
-		
-		@media only screen and (min-width: $responsive3) {
-			max-width: 28%;
-			padding: 0 1em;
-		}
-
-	} // End of .widget-area
 
 .byline,
 .updated {
@@ -179,8 +187,12 @@
 /**
  * Home Page
  */
-.home article {
-	background-color: $light;
+.home {
+
+	.content-area {
+		max-width: 100%;
+		font-size: $h4;
+	}
 }
 
 .mybu {
@@ -201,11 +213,25 @@
 /**
  * Pages
  */
-.page-title {
-	font-family: museo_slab500;
-	font-weight: bolder;
+.page-header {
+	margin-bottom: $vspacing;	
 }
 
 .archive .entry-title {
 	font-size: $h2;
+}
+
+.archive article {
+	margin-bottom: $vspacing;
+}
+
+.page-content {
+
+	.widget {
+		color: $budarkgray;
+	}
+
+	.widget_recent_entries > ul > li > a {
+		color: $budarkred;
+	}
 }
