--- a/css/_socials.scss
+++ b/css/_socials.scss
@@ -12,8 +12,11 @@
 		.menu-item {
 			display:  inline-block;
 			position: relative;
-			margin: 0 0.25em;
-			line-height: $menuheight;
+			padding: 0.5em;
+
+			@media screen and (min-width: $responsive1) {
+				padding: 0.25em;
+			}
 
 			a {
 			    color: transparent;
@@ -22,45 +25,83 @@
 			}
 
 			a:before {
-				font-size: $socials;
+				font-size: $h1;
+
+				@media screen and (min-width: $responsive3) {
+					font-size: $h3;
+				}
 			}
 
+			a[href*="bitbucket.com"]:before {
+				//@include icon($fa-var-bitbucket-square); // Square Bitbucket icon
+				@include icon($fa-var-bitbucket); // Bitbucket icon
+			}
 			a[href*="facebook.com"]:before {
-				@include icon($facebook-sign);
-			}
-			a[href*="twitter.com"]:before {
-				@include icon($twitter);
-			}
-			a[href*="plus.google.com"]:before {
-				@include icon($google-plus-sign);
-			}
-			a[href*="pinterest.com"]:before {
-				@include icon($pinterest-sign);
-			}
-			a[href*="tumblr.com"]:before {
-				@include icon($tumblr-sign);
-			}
-			a[href*="youtube.com"]:before {
-				@include icon($youtube-sign);
+				//@include icon($fa-var-facebook-square); // Square Facebook icon
+				@include icon($fa-var-facebook); // Facebook "F" icon
 			}
 			a[href*="flickr.com"]:before {
-				@include icon($flickr);
+				@include icon($fa-var-flickr); // Flickr icon
+			}
+			a[href*="github.com"]:before {
+				//@include icon($fa-var-github-square); // Square Github icon
+				@include icon($fa-var-github); // Github silhoette icon
+				//@include icon($fa-var-github-alt); // Github cathead icon
 			}
 			a[href*="instagram.com"]:before {
-				@include icon($instagram);
+				@include icon($fa-var-instagram); // Instagram icon
 			}
 			a[href*="linkedin.com"]:before {
-				@include icon($linkedin-sign);
+				//@include icon($fa-var-linkedin-square); // Square LinkedIn icon
+				@include icon($fa-var-linkedin); // LinkedIn "in" icon
 			}
+			a[href*="pinterest.com"]:before {
+				//@include icon($fa-var-pinterest-square); // Square Pinterest icon
+				@include icon($fa-var-pinterest); // Circular Pinterest icon
+			}
+			a[href*="plus.google.com"]:before {
+				//@include icon($fa-var-google-plus-square); // Square Google+ icon
+				@include icon($fa-var-google-plus); // Google+ "g+" icon
+			}
+			a[href*="tumblr.com"]:before {
+				//@include icon($fa-var-tumblr-square); // Square tumblr icon
+				@include icon($fa-var-tumblr); // Tumblr "t" icon
+			}
+			a[href*="twitter.com"]:before {
+				//@include icon($fa-var-twitter-square); // Square Twitter bird icon
+				@include icon($fa-var-twitter); // Twitter bird icon
+			}
+			a[href*="vimeo.com"]:before {
+				@include icon($fa-var-vimeo-square); // Square Vimeo icon
+			}
+			a[href*="xing.com"]:before {
+				//@include icon($fa-var-xing-square); // Square Xing icon
+				@include icon($fa-var-xing); // Xing "x" icon
+			}
+			a[href*="youtube.com"]:before {
+				//@include icon($fa-var-youtube-square); // Square Youtube icon
+				//@include icon($fa-var-youtube-play); // Youtube play button icon
+				@include icon($fa-var-youtube); // Youtube icon
+			}
+			
 			a[href*="movie"]:before,
 			a[href*="film"]:before {
-				@include icon($film);
+				@include icon($fa-var-film); // Film strip icon
+				//@include icon($fa-var-video-camera); // Video camera icon
 			}
 			a[href$=".rss"]:before, 
+			a[href$="rss2"]:before, 
 			a[href$="rss.xml"]:before, 
 			a[href*="/feed/"]:before,
 			a[href*="/rss/"]:before {
-				@include icon($rss);
+				//@include icon($fa-var-rss-square); // Square RSS icon
+				@include icon($fa-var-rss); // RSS icon
+			}
+
+			a[href*="mailto:"]:before {
+				//@include icon($fa-var-envelope-o); // Open envelope
+				////@include icon($fa-var-envelope); // Solid envelope
+				content: '\0040';
 			}
 		}
 	}
